[gd_scene load_steps=13 format=3 uid="uid://cq8rakc0xcf22"]

[ext_resource type="Script" uid="uid://cg4ot4jg0otsc" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/DialogueContainer/dialogue_container.gd" id="1_d66cv"]
[ext_resource type="PackedScene" uid="uid://cggkdkq5crbw4" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardBody.tscn" id="1_nbieq"]
[ext_resource type="PackedScene" uid="uid://b51r528fxi561" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerTitle.tscn" id="2_0bxat"]
[ext_resource type="Material" uid="uid://dqa3gw7ngocec" path="res://Shader/GausBlur/GausBlur.tres" id="2_em1py"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="5_s72ly"]
[ext_resource type="PackedScene" uid="uid://dk5255oi6br8j" path="res://Components/TransitionScreen/TransistionScreen.tscn" id="6_s72ly"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_def7h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_em1py"]

[sub_resource type="ViewportTexture" id="ViewportTexture_s72ly"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ks5si"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.108, 0.485, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfomw"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.108, 0.485, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffycc"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.108, 0.485, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DialogueContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_def7h")
script = ExtResource("1_d66cv")

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource("2_em1py")
layout_mode = 2

[node name="ColorRectBG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="Content" type="Control" parent="."]
layout_mode = 2

[node name="ContentPanel" type="PanelContainer" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_em1py")

[node name="ContentMargin" type="MarginContainer" parent="Content/ContentPanel"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CardBody" parent="Content/ContentPanel/ContentMargin" instance=ExtResource("1_nbieq")]
layout_mode = 2
size_flags_vertical = 4
card_size = Vector2(600, 200)

[node name="TextureRect" parent="Content/ContentPanel/ContentMargin/CardBody" index="0"]
texture = SubResource("ViewportTexture_s72ly")

[node name="SubViewport" parent="Content/ContentPanel/ContentMargin/CardBody" index="1"]
size = Vector2i(600, 200)

[node name="CardBody" parent="Content/ContentPanel/ContentMargin/CardBody/SubViewport/Control" index="0"]
custom_minimum_size = Vector2(600, 200)
offset_right = 600.0
offset_bottom = 200.0

[node name="PanelContainer" parent="Content/ContentPanel/ContentMargin/CardBody/SubViewport/Control/CardBody/Front" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_ks5si")

[node name="CardDrawerTitle" parent="Content/ContentPanel/ContentMargin/CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="0" instance=ExtResource("2_0bxat")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vfomw")
content = "HELLO, MY NAME IS TUTORIAL"
title = "NAMETAG"

[node name="PanelContainer" parent="Content/ContentPanel/ContentMargin/CardBody/SubViewport/Control/CardBody/Back" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_ffycc")

[node name="BtnControls" parent="." instance=ExtResource("5_s72ly")]
layout_mode = 2

[node name="TransitionScreen" parent="." instance=ExtResource("6_s72ly")]
layout_mode = 2

[editable path="Content/ContentPanel/ContentMargin/CardBody"]
